Fix layout bug

--- a/src/styles/default.css
+++ b/src/styles/default.css
@@ -8,5 +8,5 @@ html,
 body {
   font-family: 'Inter', sans-serif;
   font-size: 100%;
-  height: 100vh;
+  min-height: 100vh;
 }
